--- a/cn.zh-CN/产品定价/购买态势感知.md
+++ b/cn.zh-CN/产品定价/购买态势感知.md
@@ -11,16 +11,16 @@
 
     -   **资产规模**：指定要防护的服务器总数，包括ECS服务器和非阿里云服务器。默认显示当前账号下拥有的ECS实例总数，资产规模不应小于该数量。
 
-        **Note:** 如果您预计在购买时长内，要防护的服务器总数将会增加，建议您在此处选择预计当前账号下将会拥有的服务器总数。
+        **说明：** 如果您预计在购买时长内，要防护的服务器总数将会增加，建议您在此处选择预计当前账号下将会拥有的服务器总数。
 
     -   **版本选择**：默认购买企业版。关于企业版和基础版的区别，请参考[态势感知功能特性](../cn.zh-CN/产品简介/功能特性.md#)。
     -   **安全大屏**：增值服务，如果勾选则包含在服务范围中。提供10块可视化大屏界面，用于从宏观层面监控安全态势。
     -   **全量日志**：增值服务，如果勾选则包含在服务范围中。提供主机日志、网络日志等10类安全日志的全量日志检索以及日志投递服务，用于事件回溯和安全分析（将安全日志投递到[阿里云日志服务](https://www.aliyun.com/product/sls)进行处理分析）。
 3.   选择**购买时长**，并勾选是否需要**自动续费**。 
 
-    **Note:** 资产规模不足6台时，最小购买时长为1年；资产规模是6台至10台时，最小购买时长为3个月；资产规模大于10台时，最小购买时长为1个月。
+    **说明：** 资产规模不足6台时，最小购买时长为1年；资产规模是6台至10台时，最小购买时长为3个月；资产规模大于10台时，最小购买时长为1个月。
 
-    **Note:** 勾选自动续费后，自动续费周期与购买时长对应，即按月购买的自动续费周期为一个月，按年购买的自动续费周期是一年。
+    **说明：** 勾选自动续费后，自动续费周期与购买时长对应，即按月购买的自动续费周期为一个月，按年购买的自动续费周期是一年。
 
 4.   单击**立即购买**，并完成支付。 
 
