--- a/cn.zh-CN/快速入门/快速入门.md
+++ b/cn.zh-CN/快速入门/快速入门.md
@@ -2,14 +2,14 @@
 
 云盾态势感知为您提供安全告警、漏洞检测、基线检查、资产指纹、日志检索等功能，全方位检测和防护您的服务器和Web应用安全，为您提供详实直观的资产统计及安全信息。
 
-1.   登录 [云盾态势感知控制台](https://yundun.console.aliyun.com/?p=sas)。
-2.  为您想要防护的服务器安装态势感知Agent插件。 
+1.   登录 [云盾态势感知控制台](https://yundun.console.aliyun.com/?p=sas)。 
+2.   为您想要防护的服务器安装态势感知Agent插件。 
 
-    **Note:** 态势感知Agent插件是态势感知提供的本地安全插件，该插件已集成在阿里云的公共镜像中。如果您在购买ECS实例时选择公共镜像，并选择启用**安全加固**，则态势感知Agent插件已经默认通过镜像安装。您也可以参考[安装Agent](../cn.zh-CN/用户指南/Agent插件/安装Agent.md#)，为您的非阿里云服务器手动安装态势感知Agent插件，进行防护。
+    **说明：** 态势感知Agent插件是态势感知提供的本地安全插件，该插件已集成在阿里云的公共镜像中。如果您在购买ECS实例时选择公共镜像，并选择启用**安全加固**，则态势感知Agent插件已经默认通过镜像安装。您也可以参考[安装Agent](../cn.zh-CN/用户指南/Agent插件/安装Agent.md#)，为您的非阿里云服务器手动安装态势感知Agent插件，进行防护。
 
 3.   态势感知Agent插件安装成功后，您可以在态势感知总览页面查看当前阿里云账号下的服务器安全状态，包括安全告警事件、主机漏洞扫描结果、系统配置风险和云产品配置风险。 
 
-    **Note:** 服务器安全状态通过态势感知Agent收集、检测得出，您可参考态势感知Agent在线状态，确保您想要防护的服务器在保护中。如果服务器显示未受保护，您可以参考[Agent离线排查](../cn.zh-CN/用户指南/Agent插件/Agent离线排查.md#)检查离线原因。
+    **说明：** 服务器安全状态通过态势感知Agent收集、检测得出，您可参考态势感知Agent在线状态，确保您想要防护的服务器在保护中。如果服务器显示未受保护，您可以参考[Agent离线排查](../cn.zh-CN/用户指南/Agent插件/Agent离线排查.md#)检查离线原因。
 
 4.   您可在态势感知控制台中进行以下操作，查看并处理服务器上的弱点及安全事件，提升服务器的安全性。 
     -   定位到资产列表页面，查看当前阿里云账号下的服务器的安全状态明细，您也可以为服务器资产添加标签、进行分组，以便于管理。详细功能介绍，请参考[资产列表功能介绍](../cn.zh-CN/用户指南/资产列表.md#)。
