--- a/cn.zh-CN/用户指南/日志检索/使用日志检索.md
+++ b/cn.zh-CN/用户指南/日志检索/使用日志检索.md
@@ -2,15 +2,15 @@
 
 态势感知提供主机和Web日志检索功能，将散落在阿里云各系统中的日志集中管理，便于您在出现主机和Web问题时一站式搜索定位问题根源。
 
-**Note:** 您需要升级到态势感知（企业版）才能使用日志检索功能。只有当您启用日志检索功能后，态势感知才会记录您的日志并支持检索。目前，态势感知（企业版）支持180天以内的日志存储，并提供30天以内的日志查询。
+**说明：** 您需要升级到态势感知（企业版）才能使用日志检索功能。只有当您启用日志检索功能后，态势感知才会记录您的日志并支持检索。目前，态势感知（企业版）支持180天以内的日志存储，并提供30天以内的日志查询。
 
 ## 功能特性 {#section_tpl_ptq_zdb .section}
 
 态势感知日志检索功能具备以下特性：
 
 -   一站式日志检索平台，集中查询阿里云各产品日志，单一接口，便于问题溯源。
--   日志功能的SaaS化，无需进行额外安装部署，仅使用浏览器登录到态势感知控制台，即可查询服务器日志。
--   支持TB级数据检索，以及50个维度的数据逻辑（布尔表达式）组合，可以秒级展示日志全文检索结果。
+-   日志功能SaaS化，无需进行额外安装部署，仅使用浏览器登录态势感知控制台，即可查询服务器日志。
+-   支持TB级数据检索，以及多维度的数据逻辑（布尔表达式）组合，可以秒级展示日志全文检索结果。
 -   支持丰富的主机和Web日志源。
 -   支持日志投递，允许您将安全日志导入到阿里云日志服务做进一步分析。关于日志投递功能，请参考 [日志投递](cn.zh-CN/用户指南/日志检索/日志投递.md#)。
 
@@ -38,25 +38,25 @@
 |网络会话日志|云上业务的网络5元组日志（全端口）|
 |DNS日志|网络DNS解析日志|
 
-**Note:** 各种日志源支持的字段信息，请查看[各日志源字段说明](cn.zh-CN/用户指南/日志检索/各日志源字段说明.md#)。
+**说明：** 各种日志源支持的字段信息，请查看[各日志源字段说明](cn.zh-CN/用户指南/日志检索/各日志源字段说明.md#)。
 
 ## 操作步骤 {#section_dql_ptq_zdb .section}
 
 参照以下步骤，使用日志检索功能查询日志：
 
-1.  登录 [态势感知控制台](https://yundun.console.aliyun.com/?p=sas)。
+1.  登录[态势感知控制台](https://yundun.console.aliyun.com/?p=sas)。
 2.  在左侧导航栏，选择**更多功能** \> **日志检索**。
-3.  选择日志源、需要检索的日志字段，输入您想要检索的关键词，并选择搜索时间范围（24小时，7天，或自定义最近30天内），然后单击**搜索**。
+3.  选择**日志源**、需要检索的日志**字段**、条件逻辑，输入您想要检索的**关键词**，并选择搜索时间范围（24小时，7天，或自定义最近30天内），然后单击**搜索**。
 
     ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13644/5198_zh-CN.png)
 
     ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13644/5199_zh-CN.png)
 
-    **Note:** 您可以单击搜索条件右侧的**+**，在一个搜索条件（一个日志源）下增加多个逻辑判断（单击 **-** 可以删除某个选项）；也可以单击**增加一组**，增加多个搜索条件（不同的日志源），进行逻辑检索。关于语法逻辑的用法，请参考[语法逻辑说明](cn.zh-CN/用户指南/日志检索/语法逻辑说明.md#)。
+    **说明：** 您可以单击搜索条件右侧的**+**，在一个搜索条件（一个日志源）下增加多个逻辑判断（单击**-**可以删除某个选项）；也可以单击**增加一组**，增加多个搜索条件（不同的日志源），进行逻辑检索。关于语法逻辑的用法，请参考[语法逻辑说明](cn.zh-CN/用户指南/日志检索/语法逻辑说明.md#)。
 
-    例如，如上图所示，您可以同时搜索源IP等于`1.1.1.1`或者`2.2.2.2`的Web访问日志，和源IP等于`1.1.1.1`的网络会话日志。
+    例如，在上图中，您可以同时搜索源IP等于`1.1.1.1`或者`2.2.2.2`的Web访问日志，和源IP等于`1.1.1.1`的网络会话日志。
 
-4.  根据您设置的搜索条件，展示精细化的日志记录。同时，您可以在搜索结果中修改字段，直接做进一步检索；也可以单击**保存搜索逻辑**，保存当前搜索条件，以便后续在**已保存的搜索**中直接调用。
+4.  日志检索根据您设置的搜索条件，向您展示精细化的日志记录。您可以在搜索结果中修改字段，直接做进一步检索；也可以单击**保存搜索逻辑**，保存当前搜索条件，以便后续在**已保存的搜索**中直接调用。
 
     ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13644/5200_zh-CN.png)
 
