--- a/cn.zh-CN/用户指南/可视化大屏.md
+++ b/cn.zh-CN/用户指南/可视化大屏.md
@@ -6,6 +6,8 @@
 
 ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/6511_zh-CN.jpg)
 
+## 功能说明 {#section_ybn_zms_g2b .section}
+
 态势感知提供的可视化安全大屏包括：
 
 -   **全球业务运营实时监控**：实时展现当前云业务在全球各地的访问态势和黑客恶意攻击态势。
@@ -14,7 +16,7 @@
 
     -   绿色线代表正常访问，红色线代表已被防御的黑客攻击。
     -   屏幕最底部显示实时监控的网络出入口流量趋势，表现业务服务的稳定性。
-    -   趋势图两侧标记了访问最多的用户所在TOP5地区以及黑客攻击所在TOP5地区。
+    -   趋势图两侧分别标记了地区访问量TOP5地区以及攻击来源量TOP5地区。
 -   **业务安全态势和评分**：实时展现当前业务的安全全景监控。
 
     ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/6513_zh-CN.jpg)
@@ -27,7 +29,7 @@
 
     ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/6514_zh-CN.jpg)
 
-    -   屏幕中显示当前面临的黑客暴力破解攻击次数，以及暴力破解协议的分布图；通过大数据分析，能识别出是否有高级黑客在针对业务进行定向式爆破破解。
+    -   屏幕中显示当前面临的黑客暴力破解攻击次数，以及暴力破解协议的分布图；通过大数据分析，能识别出是否有高级黑客在针对业务进行定向式暴力破解。
     -   该大屏记录了最近3个月内暴力破解攻击趋势，为将来的取证留下数字证据。
     -   屏幕最下方实时显示主机上的漏洞、弱口令、后门、暴力破解成功、肉鸡行为等重要的安全指标数据。
 -   **业务访客概览**：基于当前1分钟内的网络流量数据，展示最近1分钟内的在线访问者人数、来访者中的IP占比、使用浏览器占比、访客系统占比、服务器的响应状态码，并罗列出访问最频繁的TOP10来访IP。
@@ -40,12 +42,12 @@
 
     -   屏幕中显示当前面临的黑客Web攻击次数，以及Web攻击的类型分布图；通过大数据分析，识别出是否有高级黑客在针对业务进行定向式Web攻击，窃取核心数据。
     -   该大屏记录了最近3个月内的Web攻击趋势，为将来的取证留下数字证据。
-    -   屏幕最下方实时显示网络层的异常连接，DDoS攻击、未授权下载、非法登录、页面篡改等重要的安全指标数据。
+    -   屏幕最下方实时显示网络层的异常连接、DDoS攻击、未授权下载、非法登录、页面篡改等重要的安全指标数据。
 -   **安全防御体系大图**：提供网络层、主机层、和应用层的攻防态势一览，全面展示云上业务的安全防御体系。外来的访问流量依次经过**网络层的DDoS清洗** \> **应用防火墙** \> **安全组的访问控制、数据库RDS层的数据防火墙**，访问流量中的DDoS攻击、Web攻击等黑客攻击均被过滤阻挡，保证业务访问流量正常。
 
     ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/6517_zh-CN.jpg)
 
--   **安全应急响应中心**：集中展示互联网最新曝光的重大漏洞疫情，以及先知，乌云等众测平台曝光的企业高危漏洞情报。对当下最紧急的漏洞进行评估，实时感知业务是否受重大的漏洞影响，并通过情报系统看到漏洞对同行业的影响，真正让安全风险可控。
+-   **安全应急响应中心**：集中展示互联网最新曝光的重大漏洞疫情，以及先知，乌云等众测平台曝光的企业高危漏洞情报。对当下最紧急的漏洞进行评估，实时感知业务是否受重大的漏洞影响，并通过情报系统查看漏洞对同行业的影响，真正让安全风险可控。
 
     ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/6518_zh-CN.jpg)
 
