--- a/intl.zh-CN/产品简介/功能特性.md
+++ b/intl.zh-CN/产品简介/功能特性.md
@@ -3,7 +3,7 @@
 云盾态势感知提供基础版及企业版两个版本。
 
 -   基础版免费提供异常登录检测和主机漏洞检测服务。
--   企业版按照包年包月方式收取服务费用，提供安全告警、主机和网络漏洞检测及修复、基线检查、资产指纹、安全分析、和日志检索等全面的安全服务。
+-   企业版按照包年包月方式收取服务费用，提供安全告警、主机漏洞检测及修复、基线检查、资产指纹和日志检索等全面的安全服务。
 
 关于基础版和企业版的具体功能对比，请参照下文。
 
@@ -69,7 +69,6 @@
 |漏洞管理|Web-CMS漏洞|【Web-CMS漏洞检测】监控网站目录，识别通用建站软件，通过漏洞文件比对方式检测建站软件中的漏洞。|√|√|
 |【漏洞修复】自研漏洞补丁，支持一键修复，通过文件替换、修改等方式从源代码级别修复漏洞。|×|√|
 |漏洞管理|应急漏洞|【应急漏洞检测】临时提供针对网络上突然出现的紧急漏洞的检测和修复服务。|√|√|
-|漏洞管理|Web漏洞扫描|通过公网模拟攻击的方式，主动探测您服务器暴露在公网上的安全漏洞，由[阿里云云盾·网络漏洞扫描系统](https://www.aliyun.com/product/avds)提供服务。|×|×|
 |基线检查|主机基线|【主机基线检查】通过任务下发模式，对主机进行安全配置扫描，对未符合标准的项目进行提醒。|×|√|
 |【主机基线检查范围】-   账号安全：检测密码策略合规、系统及应用弱口令等。
 -   系统配置：检测组策略、登录基线策略、注册表配置等存在的风险。
@@ -78,7 +77,6 @@
 
 |×|√|
 |【检测策略】支持自定义检测策略，设置检测项目、检测周期、应用的服务器组等。暂不支持自定义检测脚本。|×|√|
-|基线检查|云产品基线|【云产品基线检测】检测ECS、RDS等云产品的安全配置是否存在安全隐患。|×|√|
 |【云产品基线检查范围】-   ECS：检测安全组端口访问策略是否过宽。
 -   SLB：检测是否转发不必要的端口至公网，增加系统受攻击风险。
 -   RDS：检测数据库是否公开在外网，以及是否配置访问白名单。
@@ -92,7 +90,6 @@
 |进程管理|收集和呈现进程快照信息，便于自主清点合法进程，检测异常进程。|×|√|
 |软件管理|清点软件安装信息，在高危漏洞爆发时可快速定位到受影响资产。|×|√|
 |网站后台管理|识别网站后台资产，监控是否有撞库和异常网站后台登录行为。|×|√|
-|安全分析|访问分析|汇总SLB、ECS的所有流量统一查看，帮助区分爬虫和正常访问流量。|×|√|
 |攻击分析|支持查看系统遭受的Web攻击详情和ECS遭受的暴力破解攻击。|×|√|
 |威胁分析|识别定向的暴力破解、后门撞库攻击，发现系统的高级威胁。|×|√|
 |AK和账号密码泄露|实时监控Github等第三方代码托管网站，捕获并判定被公开的源代码（包含企业员工私自上传并不小心公开的源代码）中是否含有ECS、RDS、Redis、MySQL等资产的登录名和密码信息。|×|√|
