--- a/cn.zh-CN/产品简介/功能特性.md
+++ b/cn.zh-CN/产品简介/功能特性.md
@@ -16,48 +16,58 @@
 -   增值：表示需要在购买服务时单独勾选，才包含在服务范围中。
 
 |功能|功能项|功能详情|基础版|企业版|
-|安全告警|异常登录检测|【非常用登录地登录】系统自动记录ECS常用登录地（支持手动添加），若在非常用登录地进行登录，则触发告警。|√|√|
-|【暴力破解】检测ECS在多次尝试登录失败后最终登录成功的情况，这类情形很有可能是密码被暴力破解。|√|√|
-|【非合法IP登录】开启后，允许用户配置ECS合法登录IP（如堡垒机IP、办公网IP等）；若使用非指定的IP登录，则触发告警。|×|√|
-|【非合法账号登录】开启后，允许用户配置ECS合法登录账号；若使用非合法账号登录，则触发告警。|×|√|
-|【非合法时间登录】开启后，允许用户配置合法登录时间（如工作时间）；若在非合法登录时间登录，则触发告警。|×|√|
-|安全告警|网站后门查杀|【Webshell检测】主机+网络双重检测机制。-   主机检测：实时监控主机上网站目录文件变化。
+|安全告警|异常登录检测|【基础登录检测】-   【非常用登录地登录】系统自动记录ECS常用登录地（支持手动添加），若在非常用登录地进行登录，则触发告警。
+-   【暴力破解】检测ECS在多次尝试登录失败后最终登录成功的情况，这类情形很有可能是密码被暴力破解。
+
+|√|√|
+|【高级登录监控】-   【非合法IP登录】开启后，允许用户配置ECS合法登录IP（如堡垒机IP、办公网IP等）；若使用非指定的IP登录，则触发告警。
+-   【非合法账号登录】开启后，允许用户配置ECS合法登录账号；若使用非合法账号登录，则触发告警。
+-   【非合法时间登录】开启后，允许用户配置合法登录时间（如工作时间）；若在非合法登录时间登录，则触发告警。
+
+|×|√|
+|安全告警|网站后门查杀|【Webshell检测】主机+网络双重检测机制，检测PHP、ASP、JSP等类型的网站脚本文件。-   主机检测：实时监控主机上网站目录文件变化。
 -   网络检测：通过还原后门文件及分析网络协议进行检测。
 
-|仅主机检测|√|
+|√（仅主机检测）|√|
 |【Webshell查杀】支持在控制台一键隔离检测出来的Webshell文件。已隔离文件在30天内可以恢复。|×|√|
-|【Webshell查杀范围】PHP、ASP、JSP等类型的网站脚本文件。|√|√|
-|安全告警|恶意进程（云查杀）|【病毒检测】定期扫描进程并监控进程启动事件，通过云查杀机制检测恶意病毒和木马进程。|×|√|
-|【病毒查杀】支持在控制台一键中止进程和隔离恶意文件。|×|√|
-|【病毒查杀范围】-   勒索病毒：WanaCry、CryptoLocker等加密文件型勒索软件。
+|安全告警|恶意进程（云查杀）|【病毒检测】定期扫描进程并监控进程启动事件，通过云查杀机制检测恶意病毒和木马进程。【病毒查杀】支持在控制台一键中止进程和隔离恶意文件。
+
+【病毒查杀范围】
+
+-   勒索病毒：WanaCry、CryptoLocker等加密文件型勒索软件。
 -   恶意攻击：对外DDoS攻击木马、对外恶意扫描木马、垃圾邮件发送木马等。
 -   挖矿软件：占用服务器非法挖掘虚拟货币的资源消耗型软件。
 -   肉鸡程序：中控木马、恶意中控连接、黑客工具等。
 -   其他病毒：蠕虫病毒、Mirai病毒、感染型病毒等。
 
-|×|√|
-|【病毒库】-   更新机制：病毒版本部署在云端，由阿里云统一控制，实时更新，客户端本地无检测引擎。
+【病毒库】
+
+-   更新机制：病毒版本部署在云端，由阿里云统一控制，实时更新，客户端本地无检测引擎。
 -   病毒样本能力：基本覆盖全种类病毒，在云端集成国内外主流杀毒引擎、阿里云自研沙箱和机器学习引擎等。
 
 |×|√|
-|安全告警|进程异常行为|【异常行为检测】通过云上真实的攻防场景对入侵链路还原，建立进程行为白名单，对于进程的非法行为、黑客的入侵过程进行告警。|×|√|
-|【异常行为检测范围】-   反弹Shell：检测Bash进程执行可疑指令，服务器被远程控制执行任意命令等。
+|安全告警|进程异常行为|【异常行为检测】通过云上真实的攻防场景对入侵链路还原，建立进程行为白名单，对于进程的非法行为、黑客的入侵过程进行告警。【异常行为检测范围】
+
+-   反弹Shell：检测Bash进程执行可疑指令，服务器被远程控制执行任意命令等。
 -   数据库异常指令执行：检测MySQL、PostgreSQL、SQLSserver、Redis、Oracle等数据库的异常指令。
 -   应用进程非法操作：检测Java、FTP、Tomcat、Docker容器、Lsass.exe等应用进程的非法操作。
 -   系统进程非法行为：检测Powershell、SSH、RDP、SMBD共享、SCP文件拷贝等系统进程的非法行为。
 -   其他可疑进程行为：检测Vbscript、Host被访问、crontab被写入、Webshell写入等。
 
+【异常行为检测能力】为数百个进程建立了近千个行为模型，通过比对模型分析异常行为。
+
 |×|√|
-|【异常行为检测能力】为数百个进程建立了近千个行为模型，通过比对模型分析异常行为。|×|√|
-|安全告警|敏感文件篡改|【篡改检测】实时监控敏感目录及文件，对于异常的读取、写入、删除等敏感操作进行告警。|×|√|
-|【文件篡改检测范围】-   系统文件篡改：检测Bash、ps命令进程被恶意替换，隐藏的非法进程运行等。
+|安全告警|敏感文件篡改|【篡改检测】实时监控敏感目录及文件，对于异常的读取、写入、删除等敏感操作进行告警。【文件篡改检测范围】
+
+-   系统文件篡改：检测Bash、ps命令进程被恶意替换，隐藏的非法进程运行等。
 -   网站核心文件删除：检测黑客非法登录服务器后，恶意删除网站文件。
 -   网站挂马篡改：检测网站被加入恶意代码，造成访问者自动下载木马病毒。
 -   其他可疑事件：检测Linux、MysqlDB等被勒索软件篡改登录界面，留下邮箱或比特币钱包地址等情形。
 
 |×|√|
-|安全告警|异常网络连接|【异常连接】在主机层和网络层对网络连接进行监控，识别非法的连接行为，并进行告警。|×|√|
-|【异常连接检测范围】-   主动外连：可疑SHELL反弹、Bash主动外连等主动外连到可疑IP。
+|安全告警|异常网络连接|【异常连接】在主机层和网络层对网络连接进行监控，识别非法的连接行为，并进行告警。【异常连接检测范围】
+
+-   主动外连：可疑SHELL反弹、Bash主动外连等主动外连到可疑IP。
 -   恶意攻击：被种植恶意软件，对外发动SYN-Flood、UDP-Flood、ICMP-Flood等恶意攻击。
 -   可疑通信：检测后门程序通信、可疑Weshell通信行为等。
 
@@ -69,30 +79,38 @@
 |漏洞管理|Web-CMS漏洞|【Web-CMS漏洞检测】监控网站目录，识别通用建站软件，通过漏洞文件比对方式检测建站软件中的漏洞。|√|√|
 |【漏洞修复】自研漏洞补丁，支持一键修复，通过文件替换、修改等方式从源代码级别修复漏洞。|×|√|
 |漏洞管理|应急漏洞|【应急漏洞检测】临时提供针对网络上突然出现的紧急漏洞的检测和修复服务。|√|√|
-|基线检查|主机基线|【主机基线检查】通过任务下发模式，对主机进行安全配置扫描，对未符合标准的项目进行提醒。|×|√|
-|【主机基线检查范围】-   账号安全：检测密码策略合规、系统及应用弱口令等。
+|基线配置核查|主机基线|【主机基线检查】通过任务下发模式，对主机进行安全配置扫描，对未符合标准的项目进行提醒。【主机基线检查范围】
+
+-   账号安全：检测密码策略合规、系统及应用弱口令等。
 -   系统配置：检测组策略、登录基线策略、注册表配置等存在的风险。
 -   数据库风险：检测Redis数据库高危配置等。
 -   合规对标要求：检测是否符合CIS-Linux Centos7等系统基线要求。
 
+【自定义检测策略】支持自定义检测策略，设置检测项目、检测周期、应用的服务器组等。暂不支持自定义检测脚本。
+
 |×|√|
-|【检测策略】支持自定义检测策略，设置检测项目、检测周期、应用的服务器组等。暂不支持自定义检测脚本。|×|√|
-|资产指纹|端口监听|收集和呈现端口监听信息，记录变动历史，便于清点开放的端口信息。|×|√|
-|账号管理|收集账号及对应权限信息，可清点特权账号，检测提权行为。|×|√|
-|进程管理|收集和呈现进程快照信息，便于自主清点合法进程，检测异常进程。|×|√|
-|软件管理|清点软件安装信息，在高危漏洞爆发时可快速定位到受影响资产。|×|√|
-|网站后台管理|识别网站后台资产，监控是否有撞库和异常网站后台登录行为。|×|√|
-|日志检索|进程日志|【进程启动】进程一旦启动，系统记录下该启动事件的详细信息，使用日志功能可查询进程启动记录。|×|增值|
-|【进程快照】系统抓取并存储某一时刻的进程全量日志，使用日志功能可查询进程快照信息。|×|增值|
-|日志检索|网络日志|【网络连接日志】查询主机主动对外发起网络连接的记录。【网络会话日志】主机端和网络端同时采集连接五元组信息，使用日志功能可查询网络会话记录。
+|资产指纹|资产指纹|【端口指纹】收集和呈现端口监听信息，记录变动历史，便于清点开放的端口信息。【账号】收集账号及对应权限信息，可清点特权账号，检测提权行为。
 
-【Web访问日志】系统从网络上抓取HTTP的访问日志，使用日志功能可查询Web访问记录。注：暂不支持HTTPS。
+【进程】收集和呈现进程快照信息，便于自主清点合法进程，检测异常进程。
 
-【DNS日志】查询对外请求的DNS解析日志。注：暂不支持内网DNS。
+【软件】清点软件安装信息，在高危漏洞爆发时可快速定位到受影响资产。
+
+【网站后台】识别网站后台资产，监控是否有撞库和异常网站后台登录行为。
+
+|×|√|
+|日志检索|日志检索|【主机日志】-   【系统登录】查询SSH、RDP的系统登录流水中登录成功的日志。
+-   【暴力破解】查询SSH、RDP的系统登录流水中多次连续登录失败的日志。
+-   【端口监听快照】系统抓取并存储某一时刻的所有对外监听端口的快照数据，使用日志功能可查询端口监听信息。
+-   【账号快照】系统抓取并存储某一时刻的所有账号信息的快照数据，使用日志功能可查询账号信息。
+-   【进程快照】系统抓取并存储某一时刻的进程全量日志，使用日志功能可查询进程快照信息。
+-   【进程启动】进程一旦启动，系统记录下该启动事件的详细信息，使用日志功能可查询进程启动记录。
+
+【网络日志】
+
+-   【网络连接日志】查询主机主动对外发起网络连接的记录。
+-   【网络会话日志】主机端和网络端同时采集连接五元组信息，使用日志功能可查询网络会话记录。
+-   【Web访问日志】系统从网络上抓取HTTP的访问日志，使用日志功能可查询Web访问记录。注：暂不支持HTTPS。
+-   【DNS日志】查询对外请求的DNS解析日志。注：暂不支持内网DNS。
 
 |×|增值|
-|日志检索|其他日志|【系统登录】查询SSH、RDP的系统登录流水中登录成功的日志。|×|增值|
-|【暴力破解】查询SSH、RDP的系统登录流水中多次连续登录失败的日志。|×|增值|
-|【端口监听快照】系统抓取并存储某一时刻的所有对外监听端口的快照数据，使用日志功能可查询端口监听信息。|×|增值|
-|【账号快照】系统抓取并存储某一时刻的所有账号信息的快照数据，使用日志功能可查询账号信息。|×|增值|
 
