--- a/cn.zh-CN/产品简介/功能特性.md
+++ b/cn.zh-CN/产品简介/功能特性.md
@@ -89,7 +89,7 @@
 【自定义检测策略】支持自定义检测策略，设置检测项目、检测周期、应用的服务器组等。暂不支持自定义检测脚本。
 
 |×|√|
-|资产指纹|资产指纹|【端口指纹】收集和呈现端口监听信息，记录变动历史，便于清点开放的端口信息。【账号】收集账号及对应权限信息，可清点特权账号，检测提权行为。
+|资产指纹|资产指纹|【端口】收集和呈现端口监听信息，记录变动历史，便于清点开放的端口信息。【账号】收集账号及对应权限信息，可清点特权账号，检测提权行为。
 
 【进程】收集和呈现进程快照信息，便于自主清点合法进程，检测异常进程。
 
