--- a/cn.zh-CN/快速入门/快速入门.md
+++ b/cn.zh-CN/快速入门/快速入门.md
@@ -17,7 +17,7 @@
     -   定位到**漏洞管理** \> **主机漏洞**页面，查看和修复服务器上的Linux漏洞、Window漏洞、Web-CMS漏洞等。详细功能介绍，请参考[主机漏洞管理](../../../../intl.zh-CN/用户指南/漏洞管理/主机漏洞管理.md#)。
     -   定位到**基线配置核查** \> **主机基线**页面，查看并处理态势感知检测到服务器上的配置风险项。详细功能介绍，请参考[主机基线检查](../../../../intl.zh-CN/用户指南/基线配置核查/主机基线核查.md#)。
     -   定位到**更多功能** \> **资产指纹**页面，查看资产清点信息，包括服务器中运行的进程、启用的系统账号、开放的端口、使用的软件版本、网站后台登录情况。详细功能介绍，请参考[资产指纹](../../../../intl.zh-CN/用户指南/资产指纹.md#)。
-    -   定位到**更多功能** \> **日志检索**页面，搜索相应日志记录，支持的日志源包括进程日志、网络日志、登录及账号日志等10种类型。
+    -   定位到**更多功能** \> **日志检索**页面，搜索相应日志记录，支持的日志源包括进程日志、网络日志、登录及账号日志等10种类型。详细功能介绍，请参考[使用日志检索](../../../../intl.zh-CN/用户指南/日志检索/使用日志检索.md#)。
     -   为了更加灵活地使用以上功能，您也可以在态势感知控制台进行相关设置。定位到设置页面，进行以下配置：
 
         -   安装/卸载态势感知Agent插件
