--- a/cn.zh-CN/用户指南/日志检索/使用日志检索.md
+++ b/cn.zh-CN/用户指南/日志检索/使用日志检索.md
@@ -12,7 +12,6 @@
 -   日志功能SaaS化，无需进行额外安装部署，仅使用浏览器登录态势感知控制台，即可查询服务器日志。
 -   支持TB级数据检索，以及多维度的数据逻辑（布尔表达式）组合，可以秒级展示日志全文检索结果。
 -   支持丰富的主机和Web日志源。
--   支持日志投递，允许您将安全日志导入到阿里云日志服务做进一步分析。关于日志投递功能，请参考 [日志投递](cn.zh-CN/用户指南/日志检索/日志投递.md#)。
 
 ## 应用场景 {#section_wpl_ptq_zdb .section}
 
@@ -45,25 +44,26 @@
 参照以下步骤，使用日志检索功能查询日志：
 
 1.  登录[态势感知控制台](https://yundun.console.aliyun.com/?p=sas)。
-2.  在左侧导航栏，选择**更多功能** \> **日志检索**。
-3.  选择**日志源**、需要检索的日志**字段**、条件逻辑，输入您想要检索的**关键词**，并选择搜索时间范围（24小时，7天，或自定义最近30天内），然后单击**搜索**。
+2.  在左侧导航栏，选择**更多功能**。
+3.  选择**日志检索**。
+4.  选择**日志源**、需要检索的日志**字段**、条件逻辑，输入您想要检索的**关键词**，并选择搜索时间范围（24小时，7天，或自定义最近30天内），然后单击**搜索**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13644/5198_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13644/15330183975198_zh-CN.png)
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13644/5199_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13644/15330183975199_zh-CN.png)
 
     **说明：** 您可以单击搜索条件右侧的**+**，在一个搜索条件（一个日志源）下增加多个逻辑判断（单击**-**可以删除某个选项）；也可以单击**增加一组**，增加多个搜索条件（不同的日志源），进行逻辑检索。关于语法逻辑的用法，请参考[语法逻辑说明](cn.zh-CN/用户指南/日志检索/语法逻辑说明.md#)。
 
     例如，在上图中，您可以同时搜索源IP等于`1.1.1.1`或者`2.2.2.2`的Web访问日志，和源IP等于`1.1.1.1`的网络会话日志。
 
-4.  日志检索根据您设置的搜索条件，向您展示精细化的日志记录。您可以在搜索结果中修改字段，直接做进一步检索；也可以单击**保存搜索逻辑**，保存当前搜索条件，以便后续在**已保存的搜索**中直接调用。
+5.  日志检索根据您设置的搜索条件，向您展示精细化的日志记录。您可以在搜索结果中修改字段，直接做进一步检索；也可以单击**保存搜索逻辑**，保存当前搜索条件，以便后续在**已保存的搜索**中直接调用。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13644/5200_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13644/15330183975200_zh-CN.png)
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13644/5201_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13644/15330183975201_zh-CN.png)
 
-5.  您可以根据细粒度的时间维度查看搜索结果，并将数据结果导出。
+6.  您可以根据细粒度的时间维度查看搜索结果，并将数据结果导出。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13644/5202_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/13644/15330183975202_zh-CN.png)
 
 
