--- a/cn.zh-CN/产品简介/什么是态势感知.md
+++ b/cn.zh-CN/产品简介/什么是态势感知.md
@@ -6,11 +6,24 @@
 
 ## 主要功能点 {#section_aqc_4rr_n2b .section}
 
-态势感知的主要功能点包括：
+-   **安全事件告警**
 
--   **安全事件告警**：实时检测常见的网络入侵行为，如异常登录、网站后门、主机异常、病毒攻击等，对检测到的安全事件进行告警。
--   **漏洞扫描**：自动检测云上主机的Web-CMS漏洞、Linux漏洞、Windows漏洞并提供修复服务，对网络上突然出现的紧急漏洞提供应急检测和修复接口。
--   **基线配置核查**：根据默认或自定义扫描策略，定期检测云上主机的合规基线配置、系统策略配置、账号安全和弱密码等。
--   **资产指纹**：收集并记录服务器上的运行进程、系统账号、开放端口、软件版本、和网站后台信息，全面展示资产的运行状态。
--   **日志检索和分析**：提供10种主机和Web日志检索和分析功能，将安全日志集中管理，在出现主机和Web问题时一站式搜索定位问题根源。
+    实时检测常见的网络入侵行为，如异常登录、网站后门、主机异常、病毒攻击等，对检测到的安全事件进行告警。
+
+-   **漏洞扫描**
+
+    自动检测云上主机的Web-CMS漏洞、Linux漏洞、Windows漏洞并提供修复服务，对网络上突然出现的紧急漏洞提供应急检测和修复接口。
+
+-   **基线配置核查**
+
+    根据默认或自定义扫描策略，定期检测云上主机的合规基线配置、系统策略配置、账号安全和弱密码等。
+
+-   **资产指纹**
+
+    收集并记录服务器上的运行进程、系统账号、开放端口、软件版本、和网站后台信息，全面展示资产的运行状态。
+
+-   **日志检索和分析**
+
+    提供10种主机和Web日志检索和分析功能，将安全日志集中管理，在出现主机和Web问题时一站式搜索定位问题根源。
+
 
