--- a/cn.zh-CN/用户指南/日志分析/日志报表/日志报表仪表盘.md
+++ b/cn.zh-CN/用户指南/日志分析/日志报表/日志报表仪表盘.md
@@ -1,10 +1,10 @@
 # 日志报表仪表盘 {#concept_wgk_sjl_kfb .concept}
 
-态势感知**日志报表** 页面为您集中展示登录中心、进程中心和网络连接中心的相关数据。
+态势感知**日志报表** 页面为您集中展示登录中心、进程中心和网络连接中心这3个仪表盘的相关数据。
 
-态势感知日志分析功能开通后，日志服务为您自动创建3个默认的仪表盘页面。
+态势感知日志分析功能开通后，仪表盘页面自动被创建。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22778/153910611213515_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22778/153910641513515_zh-CN.png)
 
 ## 登录中心 {#section_k33_2bl_kfb .section}
 
