--- a/cn.zh-CN/用户指南/日志分析/态势感知日志分类/日志类别及参数说明.md
+++ b/cn.zh-CN/用户指南/日志分析/态势感知日志分类/日志类别及参数说明.md
@@ -28,9 +28,9 @@
 
 |日志来源|主题（`__topic__`）|描述|备注|
 |----|---------------|--|--|
-|漏洞日志|sas-vul-log|漏洞日志|时时采集。|
-|基线日志|sas-hc-log|基线日志|时时采集。|
-|安全告警日志|sas-security-log|安全告警日志|时时采集。|
+|漏洞日志|sas-vul-log|漏洞日志|实时采集。|
+|基线日志|sas-hc-log|基线日志|实时采集。|
+|安全告警日志|sas-security-log|安全告警日志|实时采集。|
 
 ## 网络日志 {#section_cz4_12m_kfb .section}
 
