--- a/intl.zh-CN/用户指南/日志分析/高级管理.md
+++ b/intl.zh-CN/用户指南/日志分析/高级管理.md
@@ -8,11 +8,11 @@
 2.  单击左侧导航栏**日志分析**。
 3.  单击**日志分析**页面右上角的**高级设置**按钮。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23601/153927548513596_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23601/153933010513596_zh-CN.png)
 
 4.  在日志服务高级管理对话框中单击**前往**打开日志库控制台进行相关操作。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23601/153927548613597_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23601/153933010513597_zh-CN.png)
 
     具体高级操作参见：
 
@@ -20,4 +20,6 @@
     -   [实时订阅与消费](https://help.aliyun.com/document_detail/28997.html)
     -   [数据投递](https://help.aliyun.com/document_detail/43724.html)
     -   [对接其他可视化](https://help.aliyun.com/document_detail/60952.html)
+
+**说明：** 除了通过管理控制台进行操作外，日志分析服务还提供了 API（Application Programming Interface）方式写入、查询日志数据，管理您的项目及日志库等。API参考详见[日志服务API参考](https://help.aliyun.com/document_detail/93452.html)。
 
