--- a/intl.zh-CN/产品简介/什么是态势感知.md
+++ b/intl.zh-CN/产品简介/什么是态势感知.md
@@ -20,7 +20,7 @@
 
 -   **资产指纹**
 
-    收集并记录服务器上的运行进程、系统账号、开放端口、软件版本、和网站后台信息，全面展示资产的运行状态。
+    收集并记录服务器上的运行进程、系统账号、开放端口、软件版本和网站后台信息，全面展示资产的运行状态。
 
 -   **日志检索和分析**
 
