--- a/cn.zh-CN/用户指南/日志分析/限制说明.md
+++ b/cn.zh-CN/用户指南/日志分析/限制说明.md
@@ -8,6 +8,6 @@
 -   其他日志库功能，例如查询、统计、报警、流式消费等均支持与一般日志库无差别。
 -   日志服务对专属日志库不进行任何收费，但日志服务本身需处于可用状态（开通SLS日志服务并且未超期欠费）。
 -   内置的报表可能会在以后更新并升级。
--   日志存储机制180天的日志存储阈值为50T，日志容量超过50T之后，新日志将无法写入。需要删除旧日志后才可继续写入新日志。
--   支持对7天内的数据进行检索分析，超过7天的日志数据需求请提交工单。
+-   日志最大存储容量为50T，日志数据过50T后将无法再存入新日志。建议您定期[导出日志](https://help.aliyun.com/document_detail/93040.html)进行备份并清理存储空间。
+-   默认支持在线检索和分析最近7天的日志数据，超过7天的日志数据请下载离线日志进行分析，详见[导出日志](https://help.aliyun.com/document_detail/93040.html)。
 
