--- a/cn.zh-CN/产品简介/功能特性.md
+++ b/cn.zh-CN/产品简介/功能特性.md
@@ -78,7 +78,6 @@
 |【漏洞修复】支持一键下载补丁文件并静默安装更新，需要重启的漏洞会进行提醒。|√|√|
 |漏洞管理|Web-CMS漏洞|【Web-CMS漏洞检测】监控网站目录，识别通用建站软件，通过漏洞文件比对方式检测建站软件中的漏洞。|√|√|
 |【漏洞修复】自研漏洞补丁，支持一键修复，通过文件替换、修改等方式从源代码级别修复漏洞。|×|√|
-|漏洞管理|应急漏洞|【应急漏洞检测】临时提供针对网络上突然出现的紧急漏洞的检测和修复服务。|√|√|
 |基线配置核查|主机基线|【主机基线检查】通过任务下发模式，对主机进行安全配置扫描，对未符合标准的项目进行提醒。【主机基线检查范围】
 
 -   账号安全：检测密码策略合规、系统及应用弱口令等。
@@ -104,13 +103,14 @@
 -   【账号快照】系统抓取并存储某一时刻的所有账号信息的快照数据，使用日志功能可查询账号信息。
 -   【进程快照】系统抓取并存储某一时刻的进程全量日志，使用日志功能可查询进程快照信息。
 -   【进程启动】进程一旦启动，系统记录下该启动事件的详细信息，使用日志功能可查询进程启动记录。
+-   【网络连接日志】查询主机主动对外发起网络连接的记录。
 
 【网络日志】
 
--   【网络连接日志】查询主机主动对外发起网络连接的记录。
 -   【网络会话日志】主机端和网络端同时采集连接五元组信息，使用日志功能可查询网络会话记录。
 -   【Web访问日志】系统从网络上抓取HTTP的访问日志，使用日志功能可查询Web访问记录。注：暂不支持HTTPS。
 -   【DNS日志】查询对外请求的DNS解析日志。注：暂不支持内网DNS。
 
 |×|增值|
+|日志分析|全量日志分析|提供主机进程启动、对外网络连接、系统登录、五元组、DNS请求、安全日志和报警日志等量原始日志检索和分析。|×|增值|
 
