--- a/cn.zh-CN/用户指南/总览.md
+++ b/cn.zh-CN/用户指南/总览.md
@@ -1,29 +1,63 @@
 # 总览 {#concept_jxf_z34_k2b .concept}
 
-态势感知总览面向您展示了所有资产的威胁概览信息，并提供升级、续费、扩充资产规模、调整接收通知规则等设置功能。
+态势感知**总览**页作为阿里云云平台的安全运营中心，实时展示了您所有资产的威胁概览信息和安全评分信息、以及您开通的所有云盾安全服务，并提供升级、续费、扩充资产规模、调整接收通知规则等设置功能。
 
-参照以下步骤，使用态势感知总览页：
+您可在**总览**页面查看您资产的安全概览信息和进行相关操作。
 
-1.  登录[云盾态势感知控制台](https://yundun.console.aliyun.com/?p=sas)。
-2.  前往总览页面，查看安全概览信息或执行相关操作：
-    -   **升级企业版、扩充资产规模、续费**
-        -   对于基础版态势感知，页面右上角显示了**升级企业版**操作按钮。如果您想使用基线核查、资产指纹等功能，单击**升级企业版**，并参照[购买态势感知](../../../../intl.zh-CN/产品定价/购买态势感知.md#)购买企业版服务。
-        -   对于企业版态势感知，页面右上角显示了态势感知的到期日期和资产规模，并提供**续费**操作按钮。
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22732/154349994232714_zh-CN.png)
 
-            **说明：** 如果当前资产数量超过购买服务时资产规模的20%，页面右上角也出现**扩充资产规模**操作按钮；这种情况下，您应当尽快扩充资产规模，以防功能受限。
+**总览**页面展示以下模块：
 
-    -   **查看威胁统计**
+-   态势感知的版本信息，提供升级企业版、扩充资产规模和续费操作。
+-   **安全评分**：您资产的安全分值以及受保护和未受保护资产数量。具体评分分值参见安全分值表。
 
-        页面上方展示了所有资产威胁的汇总数据，单击数字可以查看对应记录。在右侧您可以查看资产保护状态的统计数据，即有多少台资产在保护中，多少台资产未受保护；单击**未检测资产**下的数字，可以直接跳转到安装/卸载插件页面，您可以参照[安装Agent](intl.zh-CN/用户指南/接入态势感知/安装Agent.md#)，将未受保护的资产接入态势感知。
+    单击**未保护**下的数字，可以跳转到安装/卸载插件页面，您可以参照[安装Agent](intl.zh-CN/用户指南/接入态势感知/安装Agent.md#)，将未受保护的资产接入态势感知的安全防护内。
 
-        单击**接收通知规则设置**按钮，您可以调整要接收哪种程度的安全告警、主机漏洞、基线配置威胁通知，并设置安全日报的收件人。
+-   **应急漏洞**：资产中最新发现的应急漏洞信息。
+-   **威胁统计**：安全告警数量、攻击次数数量、漏洞数量和基线配置漏洞数量。
+-   **云平台最佳安全实践**：检测到的云产品基线风险信息。
+-   **安全运营**：展示一周内已处理的告警、漏洞、基线配置数量柱状图。
+-   已开通的云盾安全产品信息。
 
-    -   **查看近期待处理安全消息和TOP风险资产**
+## 升级企业版、扩充资产规模、续费 {#section_wqz_1zk_wfb .section}
 
-        页面中间左侧展示了最新检测到的且未处理的威胁信息，右侧罗列了存在最多威胁的资产。单击一条记录可以跳转到对应详情页。
+态势感知支持基础版和企业版，您可在**总览**页面右上角查看态势感知的版本信息。基础版和企业版支持的功能参见[功能特性](https://help.aliyun.com/knowledge_detail/42306.html)。
 
-    -   **查看安全事件趋势**
+-   **基础版**：页面右上角显示态势感知的版本信息和**升级企业版**操作按钮。升级到企业版后可使用基线检查、资产指纹、恶意进程（云查杀）、日志分析等高级功能。
+-   **企业版**：页面右上角显示态势感知的到期日期和资产规模（服务器台数），并提供**续费**操作按钮。
 
-        页面下方展示了威胁数量的变化趋势，您可以查看最近7日或30日内不同程度的安全告警、漏洞、基线配置风险数量的变化趋势。
+    **说明：** 如果当前服务器数量超过购买服务时服务器数量的120%，页面右上角会出现**扩充资产规模**操作按钮，提示您需尽快扩充资产规模，以防功能受限。
 
+
+## 安全分值表 {#section_jxm_rrk_wfb .section}
+
+|安全分值|分值说明|
+|----|----|
+|95-100|您的资产安全状态良好。|
+|85-94|您的资产存在安全隐患，建议您尽快加固安全防护体系。|
+|70-84|您的资产存在较多安全隐患，建议您及时加固安全防护体系。|
+|69分以下|您的资产防御黑客入侵的能力很弱，建议您尽快加固安全防护体系。|
+
+|安全分扣分项|加固建议|
+|------|----|
+|缺少安全运营中心。|建立纵深防御体系。如有疑问请提交工单了解详情。|
+|存在未修复漏洞。|修复漏洞，详见漏洞管理。|
+|存在未处理的告警事件。|对告警事件进行及时处理。详见[安全告警](https://help.aliyun.com/document_detail/68388.html)。|
+|主机缺乏安全防护。|开通安骑士企业版。|
+|保护状态为离线（Agent未安装或离线）。|[安装Agent](https://help.aliyun.com/document_detail/68597.html)。|
+|存在Web-CMS漏洞。|[修复Web-CMS漏洞](https://help.aliyun.com/document_detail/34366.html)。|
+|存在系统软件漏洞。|[修复软件漏洞](https://help.aliyun.com/document_detail/54567.html)。|
+|基线检查存在风险。|[修复基线检查漏洞](https://help.aliyun.com/document_detail/59003.html)。|
+|存在异常登录事件。|查看并处理[异常登录](https://help.aliyun.com/document_detail/52786.html)。|
+|存在网站后门威胁。|查看和处理[网站后门](https://help.aliyun.com/document_detail/52788.html)文件。|
+|存在主机异常。|对主机异常事件进行处理。|
+
+## 威胁统计 {#section_wt4_szk_wfb .section}
+
+**概览**页面展示了态势感知检测到您所有资产受到的威胁统计数据和趋势图，包含：
+
+-   未处理的安全告警数量
+-   今日被攻击次数
+-   未处理的漏洞数量
+-   基线配置漏洞数量
 
