--- a/intl.zh-CN/用户指南/总览.md
+++ b/intl.zh-CN/用户指南/总览.md
@@ -4,7 +4,7 @@
 
 您可在**总览**页面查看您资产的安全概览信息和进行相关操作。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22732/154349994232714_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22732/154381814432714_zh-CN.png)
 
 **总览**页面展示以下模块：
 
@@ -26,7 +26,7 @@
 -   **基础版**：页面右上角显示态势感知的版本信息和**升级企业版**操作按钮。升级到企业版后可使用基线检查、资产指纹、恶意进程（云查杀）、日志分析等高级功能。
 -   **企业版**：页面右上角显示态势感知的到期日期和资产规模（服务器台数），并提供**续费**操作按钮。
 
-    **说明：** 如果当前服务器数量超过购买服务时服务器数量的120%，页面右上角会出现**扩充资产规模**操作按钮，提示您需尽快扩充资产规模，以防功能受限。
+    **说明：** 如果当前服务器数量超过购买服务时配置的服务器数量，页面右上角会出现**扩充资产规模**操作按钮，提示您尽快扩充资产规模。
 
 
 ## 安全分值表 {#section_jxm_rrk_wfb .section}
