--- a/cn.zh-CN/产品简介/什么是态势感知.md
+++ b/cn.zh-CN/产品简介/什么是态势感知.md
@@ -1,20 +1,20 @@
 # 什么是态势感知 {#concept_bjv_y5w_ydb .concept}
 
-态势感知是阿里云云盾下的云上安全监控和诊断服务，面向云上资产提供安全事件检测、漏洞扫描、基线配置核查等服务。态势感知结合了阿里自主研发的大数据和机器学习算法，通过多引擎查杀帮助您实时全面了解和有效处理服务器的安全隐患，并实现对云上资产的集中安全管理。
+态势感知是阿里云云上安全监控和诊断服务，面向云上资产提供安全事件检测、漏洞扫描、基线配置核查等服务。态势感知结合了阿里自主研发的大数据和机器学习算法，通过多引擎查杀帮助您实时全面了解和有效处理服务器的安全隐患，并实现对云上资产的集中安全管理。
 
-此外，态势感知帮助您收集并呈现10余种业务安全日志和云上资产指纹，并结和网络实体威胁情报进行安全态势分析，扩大安全可见性。
+态势感知帮助您收集并呈现10余种类型的日志和云上资产指纹，并结和网络实体威胁情报进行安全态势分析，扩大安全可见性。
 
-## 主要功能点 {#section_aqc_4rr_n2b .section}
+## 功能详情 {#section_aqc_4rr_n2b .section}
 
--   **安全事件告警**
+-   **安全事件告警及告警自动关联分析**
 
-    实时检测常见的网络入侵行为，如异常登录、网站后门、主机异常、病毒攻击等，对检测到的安全事件进行告警。
+    实时检测常见的网络入侵行为，如异常登录、网站后门、主机异常、病毒攻击等，对检测到的安全事件进行告警，并对告警事件相关的异常事件进行自动关联、帮助您对威胁和入侵事件进行全方位了解和分析。
 
 -   **漏洞扫描**
 
     自动检测云上主机的Web-CMS漏洞、Linux漏洞、Windows漏洞并提供修复服务，对网络上突然出现的紧急漏洞提供应急检测和修复接口。
 
--   **基线配置核查**
+-   **基线配置检查**
 
     根据默认或自定义扫描策略，定期检测云上主机的合规基线配置、系统策略配置、账号安全和弱密码等。
 
