--- a/intl.zh-CN/用户指南/安全告警/安全告警类型.md
+++ b/intl.zh-CN/用户指南/安全告警/安全告警类型.md
@@ -1,20 +1,24 @@
 # 安全告警类型 {#concept_l5g_fzc_zdb .concept}
 
-态势感知全面和实时监测您资产的安全状况，可对常见网络入侵行为进行检测和提供高准确性的告警。
+态势感知全面和实时监测您资产的安全状况，并通过告警自动化关联分析能力帮助您更快速、准确地定位到安全风险事件，并对入侵事件和风险提供全面和准确的分析。
 
-安全告警包含以下类型的网络入侵行为：
+**安全告警类型**
 
--   **进程异常行为**：检测资产中是否存在超出正常执行流程的行为。
--   **网站后门**：使用自主查杀引擎检测常见后门文件，支持定期查杀和实时防护，并提供一键隔离功能。
-    -   Web目录中文件发生变动会触发动态检测，每日凌晨扫描整个Web目录进行静态检测。
-    -   支持针对网站后门检测的资产范围配置。
-    -   对发现的木马文件支持隔离、恢复和忽略。
--   **异常登录**：检测服务器上的登录行为，通过设置合法登录IP、时间及账号，对于例外的登录行为进行告警。支持手动添加和自动更新常用登陆地，对指定资产的异地登陆行为进行告警。
--   **异常事件**：程序运行过程中发生的异常行为。
--   **敏感文件篡改**：对服务器中的敏感文件进行恶意修改。
--   **主机异常**：查看在您服务器检测到的异常进程行为、敏感文件篡改、异常网络连接、异常事件和可疑文件等。
--   **恶意进程（病毒云查杀）**：采用云+端的查杀机制，对服务器进行实时检测，并对检测到的病毒文件提供实时告警。您可通过控制台对病毒程序进行处理。详细信息参见[病毒云查杀](intl.zh-CN/用户指南/安全告警/病毒云查杀.md#)。
--   **异常网络连接**：网络显示断开或不正常的网络连接状态。
--   **异常账号**：非合法登陆账号。
--   **其他**：DDOS流量攻击等网络入侵行为。
+|告警名称|告警说明|
+|----|----|
+|**进程异常行为**|检测资产中是否存在超出正常执行流程的行为。|
+|**网站后门**|使用自主查杀引擎检测常见后门文件，支持定期查杀和实时防护，并提供一键隔离功能：-   Web目录中文件发生变动会触发动态检测，每日凌晨扫描整个Web目录进行静态检测。
+-   支持针对网站后门检测的资产范围配置。
+-   对发现的木马文件支持隔离、恢复和忽略。
+
+|
+|**异常登录**|检测服务器上的异常登录行为。通过设置合法登录IP、时间及账号，对于例外的登录行为进行告警。支持手动添加和自动更新常用登陆地，对指定资产的异地登陆行为进行告警。|
+|**异常事件**|程序运行过程中发生的异常行为。|
+|**敏感文件篡改**|对服务器中的敏感文件进行恶意修改。|
+|**主机异常**|查看在您服务器检测到的异常进程行为、敏感文件篡改、异常网络连接、异常事件和可疑文件等。|
+|**恶意进程（病毒云查杀）**|采用云+端的查杀机制，对服务器进行实时检测，并对检测到的病毒文件提供实时告警。您可通过控制台对病毒程序进行处理。详细信息参见[病毒云查杀](intl.zh-CN/产品简介/产品优势/病毒云查杀.md#)。|
+|**异常网络连接**|网络显示断开或不正常的网络连接状态。|
+|**异常账号**|非合法登陆账号。|
+|**云产品威胁检测**|态势感知检测到您购买的其他阿里云产品存在的威胁。|
+|**其他**|DDOS流量攻击等网络入侵行为。|
 
