--- a/cn.zh-CN/用户指南/攻击分析.md
+++ b/cn.zh-CN/用户指南/攻击分析.md
@@ -4,11 +4,11 @@
 
 攻击分析基于阿里云平台的安全防护能力，为您提供基础攻击检测和防护。建议您根据自身业务需求，可考虑从防火墙和业务安全方面构建更精细化的纵深防护体系。
 
-**说明：** 原**攻击、访问、威胁**功能将于12月28日下线。
+**说明：** 原**攻击、访问、威胁**功能已下线。
 
 您可通过态势感知控制台**攻击分析**页面查看您资产受到的攻击详情。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154471837033918_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154753569533918_zh-CN.png)
 
 **说明：** 对于新购买的云产品，需等待数据同步完成后才可看到新购云产品相关的攻击分析信息。
 
@@ -23,41 +23,41 @@
 
 ## 攻击时间范围 {#section_dq5_myp_bgb .section}
 
-您可在**攻击分析**页面通过指定攻击发生的时间范围筛选查看指定时间范围内发生的攻击事件及其详情。
+您可在**攻击分析**页面通过指定攻击发生的时间范围筛选和查看指定时间范围内发生的攻击事件及其详情。
 
 攻击时间范围可选择**今天**、**最近7天**内或**最近30天**内。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154471837033920_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154753569533920_zh-CN.png)
 
 ## 攻击次数 {#section_bp1_bzp_bgb .section}
 
 您可在**攻击次数**区域查看指定时间范围内资产被攻击的总次数曲线图和攻击次数峰谷值。鼠标悬浮在曲线图上可展示攻击发生的日期和次数值。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154471837033921_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154753569533921_zh-CN.png)
 
 ## 攻击类型分布 {#section_ijj_zyp_bgb .section}
 
 您可在**攻击类型分布**区域查看攻击类型名称和该类型攻击发生的总次数。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154471837033922_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154753569533922_zh-CN.png)
 
 ## 攻击来源TOP5 {#section_ehk_zyp_bgb .section}
 
 您可在**攻击来源TOP5**区域查看攻击您资产次数排名前5的攻击源IP地址及其攻击次数。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154471837033923_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154753569533923_zh-CN.png)
 
 ## 被攻击资产TOP5 {#section_rdl_zyp_bgb .section}
 
 您可在**被攻击资产TOP5**区域查看您资产中被攻击次数排名前5的资产公网IP地址及其被攻击次数。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154471837033925_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154753569533925_zh-CN.png)
 
 ## 攻击详情列表 {#section_u1m_zyp_bgb .section}
 
 您可在攻击详情列表中查看您资产受到的攻击详细信息，包含攻击发生的时间、攻击源IP地址、被攻击的资产信息、攻击类型和攻击状态。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154471837033926_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154753569533926_zh-CN.png)
 
 **说明：** 攻击详情列表展示攻击数据上限为10000条。如需查看更多数据可切换**时间范围**查看指定时间范围内的全部攻击数据。
 
@@ -73,9 +73,9 @@
 
 您可在攻击详情列表右上方通过筛选指定的攻击类型、被攻击资产或攻击源IP地址，搜索指定的攻击事件并查看其详细信息。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154471837033927_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154753569533927_zh-CN.png)
 
 单击**被攻击资产**名称可跳转到该资产的详情页面，查看被攻击资产的基本信息、漏洞信息、基线检查漏洞、全部告警信息、资产指纹和安全配置信息。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154471837033928_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/78510/154753569533928_zh-CN.png)
 
