--- a/cn.zh-CN/用户指南/可视化大屏.md
+++ b/cn.zh-CN/用户指南/可视化大屏.md
@@ -1,10 +1,10 @@
 # 可视化大屏 {#concept_s4q_wnw_f2b .concept}
 
-云盾态势感知通过10块可视化的大屏界面与高效全面的情报分析能力，协助您对业务威胁进行实时感知。[单击查看可视化大屏详情](https://m.aliyun.com/markets/aliyun/act/sas_monitor_view)。
+云盾态势感知通过多化的大屏界面与高效全面的情报分析能力，协助您对业务威胁进行实时感知。[单击查看可视化大屏详情](https://m.aliyun.com/markets/aliyun/act/sas_monitor_view)。
 
-**说明：** 您必须在[购买态势感知](../../../../cn.zh-CN/产品定价/购买态势感知.md#)时勾选**安全大屏**，才能使用此功能。
+**说明：** 您必须在[购买态势感知](../../../../../cn.zh-CN/产品定价/购买态势感知.md#)时勾选**安全大屏**，才能使用此功能。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/6511_zh-CN.jpg)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/15476918156511_zh-CN.jpg)
 
 ## 功能说明 {#section_ybn_zms_g2b .section}
 
@@ -12,14 +12,14 @@
 
 -   **全球业务运营实时监控**：实时展现当前云业务在全球各地的访问态势和黑客恶意攻击态势。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/6512_zh-CN.jpg)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/15476918156512_zh-CN.jpg)
 
     -   绿色线代表正常访问，红色线代表已被防御的黑客攻击。
     -   屏幕最底部显示实时监控的网络出入口流量趋势，表现业务服务的稳定性。
     -   趋势图两侧分别标记了地区访问量TOP5地区以及攻击来源量TOP5地区。
 -   **业务安全态势和评分**：实时展现当前业务的安全全景监控。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/6513_zh-CN.jpg)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/15476918156513_zh-CN.jpg)
 
     -   顶部分别展示云上业务的安全脆弱点（如漏洞个数、弱口令个数）、信息泄露情况、和被入侵情况。
     -   右侧的安全得分直观地展示当前5分钟内的安全指数，总分为100分。
@@ -27,39 +27,33 @@
     -   屏幕最底部显示了黑客最常攻击的云上ECS资产。
 -   **主机层安全态势**：实时展现云业务在主机层的攻防态势。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/6514_zh-CN.jpg)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/15476918156514_zh-CN.jpg)
 
     -   屏幕中显示当前面临的黑客暴力破解攻击次数，以及暴力破解协议的分布图；通过大数据分析，能识别出是否有高级黑客在针对业务进行定向式暴力破解。
     -   该大屏记录了最近3个月内暴力破解攻击趋势，为将来的取证留下数字证据。
     -   屏幕最下方实时显示主机上的漏洞、弱口令、后门、暴力破解成功、肉鸡行为等重要的安全指标数据。
 -   **业务访客概览**：基于当前1分钟内的网络流量数据，展示最近1分钟内的在线访问者人数、来访者中的IP占比、使用浏览器占比、访客系统占比、服务器的响应状态码，并罗列出访问最频繁的TOP10来访IP。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/6515_zh-CN.jpg)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/15476918156515_zh-CN.jpg)
 
 -   **网络层安全态势**：实时展现云业务在网络层的攻防态势。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/6516_zh-CN.jpg)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/15476918156516_zh-CN.jpg)
 
     -   屏幕中显示当前面临的黑客Web攻击次数，以及Web攻击的类型分布图；通过大数据分析，识别出是否有高级黑客在针对业务进行定向式Web攻击，窃取核心数据。
     -   该大屏记录了最近3个月内的Web攻击趋势，为将来的取证留下数字证据。
     -   屏幕最下方实时显示网络层的异常连接、DDoS攻击、未授权下载、非法登录、页面篡改等重要的安全指标数据。
 -   **安全防御体系大图**：提供网络层、主机层、和应用层的攻防态势一览，全面展示云上业务的安全防御体系。外来的访问流量依次经过**网络层的DDoS清洗** \> **应用防火墙** \> **安全组的访问控制、数据库RDS层的数据防火墙**，访问流量中的DDoS攻击、Web攻击等黑客攻击均被过滤阻挡，保证业务访问流量正常。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/6517_zh-CN.jpg)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/15476918156517_zh-CN.jpg)
 
 -   **安全应急响应中心**：集中展示互联网最新曝光的重大漏洞疫情，以及先知，乌云等众测平台曝光的企业高危漏洞情报。对当下最紧急的漏洞进行评估，实时感知业务是否受重大的漏洞影响，并通过情报系统查看漏洞对同行业的影响，真正让安全风险可控。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/6518_zh-CN.jpg)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/15476918156518_zh-CN.jpg)
 
--   **安全感知体系**：实时发现对业务进行渗透的黑客行为，每当有乌云的白帽子在挖掘漏洞时，该屏幕就会自动识别并告警。
-
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/6519_zh-CN.jpg)
-
-    -   该屏幕完整地记录渗透行为，作为取证的关键证据。
-    -   通过态势感知的溯源系统，定位到黑客的姓名，年龄等个人信息。
 -   **业务稳定性监控**：以每5分钟一次的频率，从全国36个省，100多个节点（电信联通双线路），对业务的稳定性和网络访问性能进行7x24小时监控，重点展示网站在全国的平均访问时间和业务可用率。该屏幕列出了北上广深等全国重点省市的响应时间TOP排序，集中体现了业务运行的稳定性和网络质量。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/6520_zh-CN.jpg)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/15476918166520_zh-CN.jpg)
 
 -   **主机连接拓扑大屏（正在开放）**：通过主机中的数据采集，实时展示当前网络内部主机和主机之间的进出向流量拓扑图。该屏幕标记内部网络流转态势、端口连接行为、异常的网络连接行为（尤其是一段时间以来从来没有连接过的主机，在一个错误的时间发生了异常状态）。
 
@@ -72,7 +66,7 @@
 3.  选择**可视化大屏**。
 4.  单击**大屏标题**下的**修改**，设置大屏的总标题，该标题显示在**全球业务运营实时监控大屏**上。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/6521_zh-CN.jpg)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/15476918166521_zh-CN.jpg)
 
 5.  将鼠标悬放在一块大屏上，然后单击**进入大屏**，查看大屏内容。
 6.  设置投屏。将您需要投出到电视的大屏，拖拽到电视墙中。
@@ -81,10 +75,10 @@
 
     -   常见的八屏显卡（如旌宇 HD775G8VD）如下所示。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/6522_zh-CN.jpg)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/15476918166522_zh-CN.jpg)
 
     -   常见的四屏显卡（如旌宇 GT730 F4HD）如下所示。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/6523_zh-CN.jpg)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15127/15476918166523_zh-CN.jpg)
 
 
