--- a/intl.zh-CN/用户指南/总览.md
+++ b/intl.zh-CN/用户指南/总览.md
@@ -4,7 +4,7 @@
 
 您可在**总览**页面查看您资产的安全概览信息和进行相关操作。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22732/154751781632714_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22732/154805242132714_zh-CN.png)
 
 **总览**页面展示以下模块：
 
@@ -13,8 +13,11 @@
 
     单击**未保护**下的数字，可以跳转到安装/卸载插件页面，您可以参照[安装Agent](intl.zh-CN/用户指南/接入态势感知/安装Agent.md#)，将未受保护的资产接入态势感知的安全防护内。
 
--   **应急漏洞**：资产中最新发现的应急漏洞信息。
--   **威胁统计**：安全告警数量、攻击次数数量、漏洞数量和基线配置漏洞数量。
+-   威胁统计数据：
+    -   **安全告警**：显示您资产中的告警总数量和不同危险等级（紧急、可疑、提醒）告警对应的数量。单击安全告警总数值可跳转到[安全告警](intl.zh-CN/用户指南/安全告警/安全告警类型.md#)页面。
+    -   **攻击次数**：显示您资产受到攻击的总次数。单击攻击总次数可跳转到[攻击分析](intl.zh-CN/用户指南/攻击分析.md#)页面。
+    -   **应急漏洞**：显示资产中最新发现的应急漏洞信息。单击漏洞总数值可跳转到[漏洞管理](intl.zh-CN/用户指南/漏洞管理/主机漏洞/主机漏洞管理.md#)页面。
+    -   **基线检查**：显示您资产中存在的基线风险总数量和不同危险等级的基线风险对应的数量。单击基线风险总数值可跳转到[基线检查](intl.zh-CN/用户指南/基线检查/主机基线检查概述.md#)页面。
 -   **云平台最佳安全实践**：检测到的云产品基线风险信息。
 -   **安全运营**：展示一周内已处理的告警、漏洞、基线配置数量柱状图。
 -   已开通的云盾安全产品信息。
@@ -51,13 +54,4 @@
 |存在异常登录事件。|查看并处理[异常登录](https://help.aliyun.com/document_detail/52786.html)。|
 |存在网站后门威胁。|查看和处理[网站后门](https://help.aliyun.com/document_detail/52788.html)文件。|
 |存在主机异常。|对主机异常事件进行处理。|
-
-## 威胁统计 {#section_wt4_szk_wfb .section}
-
-**概览**页面展示了态势感知检测到您所有资产受到的威胁统计数据和趋势图，包含：
-
--   未处理的安全告警数量
--   今日被攻击次数
--   未处理的漏洞数量
--   基线配置漏洞数量
 
