--- a/cn.zh-CN/用户指南/总览.md
+++ b/cn.zh-CN/用户指南/总览.md
@@ -4,17 +4,20 @@
 
 您可在**总览**页面查看您资产的安全概览信息和进行相关操作。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22732/154762312932714_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22732/154805242132714_zh-CN.png)
 
 **总览**页面展示以下模块：
 
 -   态势感知的版本信息，提供升级企业版、扩充资产规模和续费操作。
 -   **安全评分**：您资产的安全分值以及受保护和未受保护资产数量。具体评分分值参见安全分值表。
 
-    单击**未保护**下的数字，可以跳转到安装/卸载插件页面，您可以参照[安装Agent](cn.zh-CN/用户指南/接入态势感知/安装Agent.md#)，将未受保护的资产接入态势感知的安全防护内。
+    单击**未保护**下的数字，可以跳转到安装/卸载插件页面，您可以参照[安装Agent](intl.zh-CN/用户指南/接入态势感知/安装Agent.md#)，将未受保护的资产接入态势感知的安全防护内。
 
--   **应急漏洞**：资产中最新发现的应急漏洞信息。
--   **威胁统计**：安全告警数量、攻击次数数量、漏洞数量和基线配置漏洞数量。
+-   威胁统计数据：
+    -   **安全告警**：显示您资产中的告警总数量和不同危险等级（紧急、可疑、提醒）告警对应的数量。单击安全告警总数值可跳转到[安全告警](intl.zh-CN/用户指南/安全告警/安全告警类型.md#)页面。
+    -   **攻击次数**：显示您资产受到攻击的总次数。单击攻击总次数可跳转到[攻击分析](intl.zh-CN/用户指南/攻击分析.md#)页面。
+    -   **应急漏洞**：显示资产中最新发现的应急漏洞信息。单击漏洞总数值可跳转到[漏洞管理](intl.zh-CN/用户指南/漏洞管理/主机漏洞/主机漏洞管理.md#)页面。
+    -   **基线检查**：显示您资产中存在的基线风险总数量和不同危险等级的基线风险对应的数量。单击基线风险总数值可跳转到[基线检查](intl.zh-CN/用户指南/基线检查/主机基线检查概述.md#)页面。
 -   **云平台最佳安全实践**：检测到的云产品基线风险信息。
 -   **安全运营**：展示一周内已处理的告警、漏洞、基线配置数量柱状图。
 -   已开通的云盾安全产品信息。
@@ -24,14 +27,9 @@
 态势感知支持基础版和企业版，您可在**总览**页面右上角查看态势感知的版本信息。基础版和企业版支持的功能参见[功能特性](https://help.aliyun.com/knowledge_detail/42306.html)。
 
 -   **基础版**：页面右上角显示态势感知的版本信息和**升级企业版**操作按钮。升级到企业版后可使用基线检查、资产指纹、恶意进程（云查杀）、日志分析等高级功能。
-
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/15476231296876_zh-CN.png)
-
 -   **企业版**：页面右上角显示态势感知的到期日期和资产规模（服务器台数），并提供**续费**操作按钮。
 
     **说明：** 如果当前服务器数量超过购买服务时配置的服务器数量，页面右上角会出现**扩充资产规模**操作按钮，提示您尽快扩充资产规模。
-
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/15476231296868_zh-CN.png)
 
 
 ## 安全分值表 {#section_jxm_rrk_wfb .section}
@@ -56,21 +54,4 @@
 |存在异常登录事件。|查看并处理[异常登录](https://help.aliyun.com/document_detail/52786.html)。|
 |存在网站后门威胁。|查看和处理[网站后门](https://help.aliyun.com/document_detail/52788.html)文件。|
 |存在主机异常。|对主机异常事件进行处理。|
-
-## 威胁统计 {#section_wt4_szk_wfb .section}
-
-**概览**页面展示了态势感知检测到您所有资产受到的威胁统计数据和趋势图，包含：
-
--   未处理的安全告警数量
--   今日被攻击次数
--   未处理的漏洞数量
--   基线配置漏洞数量
-
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/15476231296873_zh-CN.png)
-
-## 更多信息 {#section_dzg_qrl_lgb .section}
-
-如果您需要安全专家帮助提升系统安全性，可使用安全加固服务。在您授权后，专业安全工程师为您修复安全基线、漏洞、排查系统潜在安全威胁，提升资产安全性。
-
-详细信息参见[安全加固](https://www.aliyun.com/product/xianzhi_securityconsolidate)。
 
