--- a/cn.zh-CN/用户指南/基线检查/主机基线检查概述.md
+++ b/cn.zh-CN/用户指南/基线检查/主机基线检查概述.md
@@ -1,6 +1,6 @@
 # 主机基线检查概述 {#concept_xpl_nzc_zdb .concept}
 
-态势感知支持和云产品基线检测服务云产品上存配置项，并提供修复建议。本文介绍了如何使用主机基线检查功能检测并修复服务器上存在风险的配置。
+本文介绍了如何使用主机基线检查功能检测并修复服务器上存在风险的配置。
 
 ## 功能描述 {#section_gxf_n4k_zdb .section}
 
