--- a/cn.zh-CN/用户指南/日志分析/开通日志分析服务.md
+++ b/cn.zh-CN/用户指南/日志分析/开通日志分析服务.md
@@ -4,26 +4,39 @@
 
 使用日志分析服务之前，您需在态势感知控制台开通和购买日志服务。
 
-态势感知**基础版**用户如需使用日志分析服务，需先升级到**企业版**。详细信息参见[服务续费与升级](../../../../intl.zh-CN/产品定价/服务续费与升级.md#section_syq_dcc_zdb)。
+态势感知**基础版**用户如需使用日志分析服务，需先升级到**企业版**。详细信息参见[服务续费与升级](../../../../../intl.zh-CN/产品定价/服务续费与升级.md#section_syq_dcc_zdb)。
 
-**说明：** 态势感知使用专属的日志库，日志库限制条件参见[日志库限制说明](../../../../intl.zh-CN/产品简介/限制说明.md#)。
+**说明：** 态势感知使用专属的日志库，日志库限制条件参见[日志库限制说明](../../../../../intl.zh-CN/产品简介/限制说明.md#)。
 
 ## 操作步骤 {#section_hb4_p5l_kfb .section}
 
 1.  登录[态势感知控制台](https://yundun.console.aliyun.com/?spm=5176.2020520001.1011.3.796f4bd3iakMqe&p=sas#/sas/overviews)。
 2.  在左侧导航栏单击**日志分析**进入日志分析开通引导页面。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22742/153927210313517_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22742/154812419213517_zh-CN.png)
 
 3.  在**日志分析开通引导**页面单击**立即开通**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22742/153927210313516_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22742/154812419213516_zh-CN.png)
 
-4.  在购买页面勾选**全量日志**并根据需要选择其他配置。
+4.  在变配页面**日志分析**选项单击**是**。
+
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22742/154812419332872_zh-CN.png)
+
 5.  单击**立即购买**。
-6.  确认订单后勾选**态势感知SAS服务协议**。
-7.  单击**去支付**完成日志服务购买。
-8.  在控制台**日志分析开通引导**页面单击**RAM授权**完成授权。
+6.  确认订单后勾选**态势感知SAS服务协议**并完成支付。
+7.  在控制台**日志分析开通引导**页面单击**立即授权**完成授权。
+
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22742/154812419332871_zh-CN.png)
+
+8.  在**云资源访问授权**页面单击**同意授权**，为访问日志服务进行授权。
+
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22742/154812419332873_zh-CN.png)
+
+9.  在**日志分析开通引导**页面单击**开始使用**，开始使用态势感知日志分析服务。
+
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22742/154812419332874_zh-CN.png)
+
 
 授权完成后您可以开始使用态势感知日志分析服务了。
 
