--- a/intl.zh-CN/产品简介/功能特性.md
+++ b/intl.zh-CN/产品简介/功能特性.md
@@ -63,14 +63,14 @@
 -   系统文件篡改：检测Bash、ps命令进程被恶意替换，隐藏的非法进程运行等。
 -   网站核心文件删除：检测黑客非法登录服务器后，恶意删除网站文件。
 -   网站挂马篡改：检测网站被加入恶意代码，造成访问者自动下载木马病毒。
--   其他可疑事件：检测Linux、MysqlDB等被勒索软件篡改登录界面，留下邮箱或比特币钱包地址等情形。
+-   其他可疑事件：检测Linux、MysqlDB等被勒索软件篡改登录界面、留下邮箱或比特币钱包地址等情形。
 
 |X|√|
 |安全告警|异常网络连接|【异常连接】在主机层和网络层对网络连接进行监控，识别非法的连接行为，并进行告警。【异常连接检测范围】
 
--   主动外连：可疑SHELL反弹、Bash主动外连等主动外连到可疑IP。
+-   主动外连：可疑shell反弹、Bash主动外连等主动外连到可疑IP。
 -   恶意攻击：被种植恶意软件，对外发动SYN-Flood、UDP-Flood、ICMP-Flood等恶意攻击。
--   可疑通信：检测后门程序通信、可疑Weshell通信行为等。
+-   可疑通信：检测后门程序通信、可疑Webshell通信行为等。
 
 |X|√|
 |漏洞管理|Linux软件漏洞|【Linux软件漏洞检测】对标CVE官方漏洞库，采用OVAL匹配引擎进行软件版本比对，对当前使用的软件版本中存在的漏洞进行告警。|√|√|
