--- a/intl.zh-CN/产品简介/功能特性.md
+++ b/intl.zh-CN/产品简介/功能特性.md
@@ -98,7 +98,7 @@
 【网站后台】识别网站后台资产，监控是否有撞库和异常网站后台登录行为。
 
 |X|√|
-|日志检索|日志检索|**说明：** 日志检索功能将于2019年1月30日下线。
+|日志检索|日志检索|**说明：** 日志检索功能将于近期下线。
 
 【主机日志】-   【系统登录】查询SSH、RDP的系统登录流水中登录成功的日志。
 -   【暴力破解】查询SSH、RDP的系统登录流水中多次连续登录失败的日志。
