--- a/intl.zh-CN/用户指南/日志检索/使用日志检索.md
+++ b/intl.zh-CN/用户指南/日志检索/使用日志检索.md
@@ -4,7 +4,7 @@
 
 **说明：** 您需要升级到态势感知（企业版）才能使用日志检索功能。只有当您启用日志检索功能后，态势感知才会记录您的日志并支持检索。目前，态势感知（企业版）支持180天以内的日志存储，并提供30天以内的日志查询。
 
-**说明：** 态势感知日志检索功能将于2019年1月30日下线。
+**说明：** 态势感知日志检索功能将于近期下线。
 
 ## 功能特性 {#section_tpl_ptq_zdb .section}
 
