--- a/cn.zh-CN/产品简介/功能特性.md
+++ b/cn.zh-CN/产品简介/功能特性.md
@@ -4,7 +4,7 @@
 
 -   基础版免费提供异常登录检测、DDoS威胁检测和主机漏洞检测服务。
 
-    **说明：** 2018年12月20日起，态势感知基础版只支持**异常登录**和**其他-DDoS**类型安全告警。若您需要启用更多高级威胁检测能力，可以通过试用态势感知企业版功能。若您此前已试用过企业版，需提工单再次申请试用资格。
+    **说明：** 2018年12月20日起，态势感知基础版只支持**异常登录**和**其他-DDoS**类型安全告警。若您需要启用更多高级威胁检测能力，可以通过试用态势感知企业版功能（试用时长为7天）。若您此前已试用过企业版，需提工单再次申请试用资格。
 
 -   企业版按照包年包月方式收取服务费用，提供安全告警、主机漏洞检测及修复、基线检查、资产指纹和日志检索等全面的安全服务。
 
@@ -17,6 +17,7 @@
 -   增值：表示需要在购买服务时单独勾选，才包含在服务范围中。
 
 |功能|功能项|功能详情|基础版|企业版|
+|--|---|----|---|---|
 |安全告警|异常登录检测|【基础登录检测】-   【非常用登录地登录】系统自动记录ECS常用登录地（支持手动添加），若在非常用登录地进行登录，则触发告警。
 -   【暴力破解】检测ECS在多次尝试登录失败后最终登录成功的情况，这类情形很有可能是密码被暴力破解。
 
