--- a/cn.zh-CN/用户指南/日志分析/限制说明.md
+++ b/cn.zh-CN/用户指南/日志分析/限制说明.md
@@ -7,5 +7,5 @@
 -   您无法通过API/SDK等方式在数据库中写入数据，或者修改日志库的属性（例如存储周期等）。
 -   开通态势感知日志服务需要先付费购买后再开通SLS日志服务。开通日志服务SLS不会收取额外费用。
 -   内置的报表可能会在以后更新并升级。
--   日志最大存储容量为50T，日志数据过50T后将无法再存入新日志。建议您定期[导出日志](https://help.aliyun.com/document_detail/93040.html)进行备份并清理存储空间。
+-   日志最大存储容量为50T，日志数据过50T后将无法再存入新日志。建议您定期[导出日志](intl.zh-CN/用户指南/日志分析/导出日志.md#)进行备份并清理存储空间。
 
